Fixed z-index issue

--- a/frontend/outfitcreator/src/Components/Create_Component/Create.css
+++ b/frontend/outfitcreator/src/Components/Create_Component/Create.css
@@ -38,3 +38,7 @@
     width: 25%;
     margin-bottom: 1em;
 }
+
+.close-icon {
+    cursor: pointer;
+}
